--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   
 
     <div class="project">
-      <img src="images/project1.png" alt="Screenshot Portfolio">
+      <img src="images/project.png" alt="Screenshot Portfolio">
       <h3>Personal Portfolio</h3>
       <p class="project-description">My first personal site, built with HTML and CSS, hosted on GitHub Pages</p>
       <a href="https://alexmimitos.github.io/portfolio/" target="_blank">Watch it live</a>
@@ -79,4 +79,5 @@
   <script src="./main.js"></script>
   
 </body>
+
 </html>
