--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="project">
       <img src="images/project.png" alt="Screenshot Portfolio">
       <h3>Personal Portfolio</h3>
-      <p class="project-description">My first personal site, built with HTML and CSS, hosted on GitHub Pages</p>
+      <p class="project-description">My first personal site, built with HTML, CSS and javascript, hosted on GitHub Pages</p>
       <a href="https://alexmimitos.github.io/portfolio/" target="_blank">Watch it live</a>
     </div>
   </section>
@@ -81,3 +81,4 @@
 </body>
 
 </html>
+
