--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <ul class="skills-list">
       <li>HTML & CSS - Basic</li>
       <li>JavaScript - Basic</li>
+      <li>Javascript-react - Basic</li>
       <li>C++ - Basic</li>
       <li>Python - Basic</li>
       <li>WordPress - Beginner Site Creation</li>
@@ -81,5 +82,6 @@
 </body>
 
 </html>
+
 
 
