--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p> I am a young programmer aiming to develop in the field of web development. Through my studies in Computer Science I have learned the basics of HTML, CSS, JavaScript, C++ and Python, while I also created a complete site with WordPress. I want to work on real projects and continue to develop my skills in both frontend and CMS systems like WordPress.</p>
+    <p> I am a young programmer aiming to develop in the field of web development. Through my studies in Computer Science i have learned the basics of HTML, CSS, JavaScript, C++ and Python, while i also created a complete site with WordPress. Recently, i have been expanding my skills by creating a 3D cube visualization project using Three.js, improving my JavaScript knowledge and practicing version with git and gitHub. My goal is to work on real-world projects and continue developing both my frotend and CMS (Wordpress) expertise.</p>
   </section>
 
   <section id="skills">
@@ -26,7 +26,6 @@
     <ul class="skills-list">
       <li>HTML & CSS - Basic</li>
       <li>JavaScript - Basic</li>
-      <li>Javascript-react - Basic</li>
       <li>C++ - Basic</li>
       <li>Python - Basic</li>
       <li>WordPress - Beginner Site Creation</li>
@@ -46,10 +45,18 @@
         <h3 class="project-title">WordPress Site Project</h3>
         <p>Creating a WordPress site for school work (IEK Intergraphics)</p>
       </li>
+
       <li>
-        <h3 class="project-title">To-Do List App</h3>
-        <p>A task management application with JavaScript</p>
-        <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
+        <h3 class="project-title">3D Cube Structure with Three.js</h3>
+        <p>Creating a WordPress site for school work (IEK Intergraphics)</p>
+        <p><strong>Technologies:</strong> Javascript, Three.js, WebGl</p>
+        <p>An interactive 3D cube model built with Three.js, consisting of multiple smaller cubes rendered in real time.</p>
+      </li>
+
+      <li>
+        <h3 class="project-title">A simple 2d game in Python with the pygame library.</h3>
+        <p>A simple 2D game in Python with Pygame library.</p>
+        <p><strong>Technologies:</strong> Python, Pygame</p>
       </li>
       <!-- I will add more  -->
     </ul>
@@ -80,8 +87,4 @@
   <script src="./main.js"></script>
   
 </body>
-
 </html>
-
-
-
