Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p> I am a young programmer aiming to develop in the field of web development. Through my studies in Computer Science i have learned the basics of HTML, CSS, JavaScript, C++ and Python, while i also created a complete site with WordPress. Recently, i have been expanding my skills by creating a 3D cube visualization project using Three.js, improving my JavaScript knowledge and practicing version with git and gitHub. My goal is to work on real-world projects and continue developing both my frotend and CMS (Wordpress) expertise.</p>
+    <p> I am a young programmer aiming to develop in the field of web development. Through my studies in Computer Science i have learned the basics of HTML, CSS, JavaScript, C++ and Python, while i also
+    created a complete site with WordPress. Recently, i have been expanding my skills by creating a 3D cube visualization project using Three.js, improving my JavaScript knowledge and practicing version
+    with git and gitHub. My goal is to work on real-world projects and continue developing both my frotend and CMS (Wordpress) expertise.</p>
   </section>
 
   <section id="skills">
@@ -88,3 +90,4 @@
   
 </body>
 </html>
+
