--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <section id="skills">
     <h2>My Skills</h2>
     <ul class="skills-list">
-      <li>HTML & CSS - Basic</li>
-      <li>JavaScript - Basic</li>
-      <li>C++ - Basic</li>
-      <li>Python - Basic</li>
-      <li>WordPress - Beginner Site Creation</li>
+      <li>HTML & CSS </li>
+      <li>JavaScript</li>
+      <li>C++</li>
+      <li>Python</li>
+      <li>WordPress - Site Creation</li>
       <li>Git & GitHub - Basic knowledge</li>
     </ul>
   </section>
@@ -90,4 +90,5 @@
   
 </body>
 </html>
+
 
