Add section comments to index.html
Added comments to sections for better organization and clarity.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 </head>
 
 <body>
+
+ <!-- ==========================
+     HEADER SECTION
+     Contains the main title and subtitle
+     ========================== -->
   <header>
     <h1>Hi, I'm Alexander </h1>
     <p>Junior Web Developer | Python Enthusiast</p>
   </header>
+
+  <!-- ==========================
+     ABOUT ME SECTION
+     Introduction and personal summary
+     ========================== -->
 
   <section id="about">
     <h2>About Me</h2>
@@ -22,6 +32,11 @@
     created a complete site with WordPress. Recently, i have been expanding my skills by creating a 3D cube visualization project using Three.js, improving my JavaScript knowledge and practicing version
     with git and gitHub. My goal is to work on real-world projects and continue developing both my frotend and CMS (Wordpress) expertise.</p>
   </section>
+
+   <!-- ==========================
+       SKILLS SECTION
+       Showcase of technical skills
+       ========================== -->
 
   <section id="skills">
     <h2>My Skills</h2>
@@ -35,10 +50,20 @@
     </ul>
   </section>
 
+   <!-- ==========================
+       LEARNING SECTION
+       Current technologies being studied
+       ========================== -->
+
   <section id="learning">
     <h2>Currently Learning</h2>
     <p>I'm currently learning React and improving my JavaScript skills. I also study WordPress custom themes.</p>
   </section>
+
+  <!-- ==========================
+       PROJECTS SECTION
+       List and showcase of completed projects
+       ========================== -->
 
   <section id="projects">
     <h2>My Projects</h2>
@@ -63,7 +88,11 @@
       <!-- I will add more  -->
     </ul>
   
-
+    <!-- ==========================
+         FEATURED PROJECT
+         Includes image, description, and external link
+         ========================== -->
+    
     <div class="project">
       <img src="images/project.png" alt="Screenshot Portfolio">
       <h3>Personal Portfolio</h3>
@@ -71,6 +100,11 @@
       <a href="https://alexmimitos.github.io/portfolio/" target="_blank">Watch it live</a>
     </div>
   </section>
+
+  <!-- ==========================
+       CONTACT SECTION
+       Contains contact information and social links
+       ========================== -->
 
   <section id="contact">
     <h2>Contact</h2>
@@ -90,5 +124,6 @@
   
 </body>
 </html>
+
 
 
