Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: alemimit@hotmail.com</p>
-    <p>LinkedIn: My LinkedIn</p>
+    <p>LinkedIn: Alex Mimitos</p>
     <p>GitHub: alexmimitos</p>
   </section>
 
@@ -124,6 +124,7 @@
   
 </body>
 </html>
+
 
 
 
